--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="mb-12">
     <img 
       id="anniv-central-image"
-      src="https://example.com/your-holomem-group-photo.jpg" 
+      src="hololive group.jpg" 
       alt="Hololive Members" 
       class="w-64 h-64 md:w-96 md:h-96 object-cover rounded-full shadow-2xl ring-8 ring-purple-500/40 mx-auto"
     >
